--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,9 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/*.js",
+      "src": "*.js",
       "use": "@vercel/node"
     }
   ],
-  "routes": [{ "src": "/api/(.*)", "dest": "/api/$1" }]
+  "routes": [{ "src": "(.*)", "dest": "$1" }]
 }
