--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,5 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [{ "src": "(.*)", "dest": "$1" }]
+  "routes": [{ "src": ".*", "dest": "$1" }]
 }
