--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "*.js",
+      "src": "main.js",
       "use": "@vercel/node"
     }
   ],
-  "routes": [{ "src": ".*", "dest": "$1" }]
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "main.js"
+    }
+  ]
 }
